--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ndpmedia.rocketmq.console</groupId>
 	<artifactId>rocketmq-console</artifactId>
-	<version>3.2.2.R2</version>
+	<version>3.2.2.R3-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>RocketMQ Console</name>
 
